<resources>
    <string name="app_name">Snap</string>
    <string name="app_logo">App Logo</string>
    <string name="snap_the_story_app">Snap: The Story App</string>
    <string name="share_inspire_and_explore_together">Share, Inspire, and Explore Together!</string>
    <string name="people_sharing">People Sharing</string>
    <string name="sign_in">Log In</string>
    <string name="sign_up">Register</string>
    <string name="back">Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="snap">Snap</string>
    <string name="discover_and_share_stories">Discover and Share Stories</string>
    <string name="welcome_message">Hello, %1$s</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="story_photo">Story photo</string>
    <string name="date">28/03/2024</string>
    <string name="add_story">Add Story</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="description">Description</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="upload">Upload</string>
    <string name="random_paragraph">" Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam at enim eget ipsum varius sodales nec sit amet sapien. Nulla consectetur ipsum sapien, a pellentesque quam aliquam sit amet. Praesent nec aliquet purus. Sed nec bibendum dui, at elementum nulla. In dui lorem, convallis eu faucibus nec, tincidunt eu justo. Integer consectetur quam nibh, non suscipit nunc posuere ac. Maecenas eu neque id tortor porttitor faucibus eget vitae lacus. Donec vel lectus vestibulum, lacinia massa quis, posuere nulla."</string>
    <string name="input_is_invalid">Input is invalid. Please check it again.</string>
    <string name="input_cant_be_empty">Input can\'t be empty. Please check it again.</string>
    <string name="no_image_warning">Please input an image first.</string>
    <string name="this_photo_has_no_description">Please input a description!</string>
    <string name="story_is_successfully_added">Story is successfully added!</string>
    <string name="there_is_something_wrong">There is something wrong.</string>
    <string name="no_media_is_selected">No media is selected</string>
    <string name="the_format_of_email_address_is_invalid">The format of email address is invalid. Please make sure it looks like this: a@example.com</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="password_warning">Password can\'t be less than 8 characters</string>
    <string name="please_try_again">Please try again</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="error_parsing">There is an error in parsing the style. Please check again.</string>
    <string name="no_style_found">No style found. Please check again</string>
</resources>